# xterminal

./: CMakeLists.txt  README.md  README_ZH.md  xterminal_broker.c  xterminal_device.c
openwrt/: Makefile
ubuntu/: Makefile  xterminal.init
